--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>rock paper scissor</title>
 </head>
 <body>
-    
+    <div class="character-container">
+        <div class="player-img character">
+            <div class="player-life character-life"><span></span></div>
+            <img src="./images/player.png" alt="player img">
+            <div class="button-container">
+                <button class="rock">ROCK</button>
+                <button class="paper">PAPER</button>
+                <button class="scissor">SCISSOR</button>
+            </div>
+        </div>
+        <div class="computer-img character">
+            <div class="computer-life character-life"><span></span></div>
+            <img src="./images/computer.png" alt="computer img">
+        </div>
+    </div>
 </body>
 </html>
