write game control

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
             <img src="./images/computer.png" alt="computer img">
         </div>
     </div>
+
+    <div class="game-control">
+        <button>START GAME</button>
+    </div>
 </body>
 </html>
