--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="player-life character-life"><span></span></div>
             <img src="./images/player.png" alt="player img">
             <div class="button-container">
-                <button class="rock">ROCK</button>
-                <button class="paper">PAPER</button>
-                <button class="scissor">SCISSOR</button>
+                <button id="rock">ROCK</button>
+                <button id="paper">PAPER</button>
+                <button id="scissor">SCISSOR</button>
             </div>
         </div>
         <div class="computer-img character">
