add paragraph for showing message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="character-container">
+        <p class="msg"></p>
         <div class="player-img character">
             <div class="player-life character-life"><span></span></div>
             <img src="./images/player.png" alt="player img">
