add class to span in character life

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="character-container">
         <p class="msg"></p>
         <div class="player-img character">
-            <div class="player-life character-life"><span></span></div>
+            <div class="character-life"><span class="player-life"></span></div>
             <img src="./images/player.png" alt="player img">
             <div class="button-container">
                 <button id="rock">ROCK</button>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="computer-img character">
-            <div class="computer-life character-life"><span></span></div>
+            <div class="character-life"><span class="computer-life"></span></div>
             <img src="./images/computer.png" alt="computer img">
         </div>
     </div>
